# js-test

./: LICENSE  README.md  meson.build
.github/ISSUE_TEMPLATE/: release-request.md
.github/PULL_REQUEST_TEMPLATE/: new-release.md  release.md
.github/workflows/: action.yml  gettext.yml  lint.yml  release.yml
data/: Application.css  com.github.timecraft.js-test.appdata.xml.in  com.github.timecraft.js-test.desktop.in  com.github.timecraft.js-test.gresource.xml  com.github.timecraft.jstest.appdata.xml.in  com.github.timecraft.jstest.desktop.in  gresource.xml  gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.timecraft.js-test.pot  com.github.timecraft.jstest.pot  de.po  es.po  fr.po  meson.build  nl_NL.po  pt.po
po/extra/: POTFILES  extra.pot  fr.po  meson.build  pt.po
src/: Constants.vala  FileManager.vala  Main.vala  Settings.vala  main.vala  meson.build
src/Dialogs/: Alert.vala
src/Views/: JSConsole.vala  SourceView.vala  WebView.vala
src/Widgets/: CopyButton.vala  HeaderBar.vala  Overlay.vala  SettingsButton.vala  SettingsMenu.vala  Toast.vala  Window.vala
