sources = files (
    'Main.vala',
    'Constants.vala',
    'FileManager.vala',
    'Settings.vala',

    'Views/SourceView.vala',
    'Views/WebView.vala',
#   'Views/JSConsole.vala',

    'Widgets/Window.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/CopyButton.vala',
    'Widgets/Overlay.vala',
    'Widgets/Toast.vala',
    'Widgets/SettingsButton.vala',
    'Widgets/SettingsMenu.vala',

    'Dialogs/Alert.vala'
)
